third_party/rust/chromium_crates_io/vendor/cxx-v1/tests/ui/drop_shared.stderr
error[E0119]: conflicting implementations of trait `forbid::Drop` for type `Shared`
 --> tests/ui/drop_shared.rs:3:5
  |
1 | #[cxx::bridge]
  | -------------- first implementation here
2 | mod ffi {
3 |     struct Shared {
  |     ^^^^^^^^^^^^^ conflicting implementation for `Shared`
